--- a/app/views/public/departments/index.html.erb
+++ b/app/views/public/departments/index.html.erb
@@ -25,17 +25,12 @@
     <h5>部名追加</h5>
   </div>
   <div class="row">
-    <!--新規登録が失敗した際のエラーメッセージの表示記述-->
-    <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
-    <% if @department.errors.any? %>
-      <%= @department.errors.count %>件のエラーが発生しました
-      <ul>
-        <% @department.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    <% end %>
     <%= form_with model: @department, url:public_departments_path,local:true do |f| %>
+      <!--新規登録が失敗した際のエラーメッセージの表示記述-->
+      <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
+      <!--部分テンプレートでのエラーメッセージ表示確認-->
+      <!--詳細は「app/view/layout/_error_messages.html.erb」参照-->
+      <%= render 'layouts/error_messages', model: f.object %>
       &emsp;&emsp;&emsp;
       <%= f.text_field :name,placeholder:"部名" %>
       &emsp;&emsp;&emsp;
