--- a/app/views/public/positions/edit.html.erb
+++ b/app/views/public/positions/edit.html.erb
@@ -5,17 +5,11 @@
   <div class="row d-flex justify-content-center mt-2">
     <div class = "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <%= form_with model: @positions,url:public_position_path(@positions),local:true do |f| %>
-        <%= f.label:name,"役職名" %>
-        <!--更新が失敗した際のエラーメッセージの表示記述-->
+        <%= f.label:name,"役職名" %>        <!--更新が失敗した際のエラーメッセージの表示記述-->
         <!--errors:モデルにバリデーションをかけた際にエラーの内容を確認できるメソッド。any?と組み合わせることで、エラーが発生しているかを判定できる-->
-        <% if @positions.errors.any? %>
-          <%= @positions.errors.count %>件のエラーが発生しました
-          <ul>
-            <% @positions.errors.full_messages.each do |message| %>
-              <li><%= message %></li>
-            <% end %>
-          </ul>
-        <% end %>
+        <!--部分テンプレートでのエラーメッセージ表示確認-->
+        <!--詳細は「app/view/layout/_error_messages.html.erb」参照-->
+        <%= render 'layouts/error_messages', model: f.object %>
         <%= f.text_field:name,placeholder:"役職名" %>
         <div class ="col mt-5 d-flex justify-content-center">
           <%= f.submit "変更内容を保存",class:'btn btn-success' %>
